--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="header__burger"></div>
                 <div class="header__tel">
                     <img src="./images/Icons/Tel.svg" alt="Иконка телефона">
-                    <a href="tel:+78123135845">+7 (812) <span>313-58-45</span></a>
+                    <a href="tel:+78123135845">+7 (812) <span class="bold_span">313-58-45</span></a>
                 </div>
             </div>
         </header>
@@ -283,7 +283,7 @@
                             </div>
                         </div>
                         <div class="scheme__block four">
-                            <img src="./images/scheme/4.svg" alt="">
+                            <img src="./images/scheme/6.svg" alt="">
                             <div class="scheme__block-main">
                                 <div class="scheme__block-header">
                                     <p class="scheme__block-number">04</p>
@@ -313,7 +313,7 @@
                             </div>
                         </div>
                         <div class="scheme__block six">
-                            <img src="./images/scheme/6.svg" alt="">
+                            <img src="./images/scheme/4.svg" alt="">
                             <div class="scheme__block-main">
                                 <div class="scheme__block-header">
                                     <p class="scheme__block-number">06</p>
