--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     </p>
                     <div class="scheme__blocks">
                         <div class="scheme__block first">
-                            <img src="./images/scheme/1.svg" alt="">
+                            <img src="./images/scheme/1.png" alt="">
                             <div class="scheme__block-main">
                                 <div class="scheme__block-header">
                                     <p class="scheme__block-number">01</p>
@@ -251,7 +251,7 @@
                             </div>
                         </div>
                         <div class="scheme__block second">
-                            <img src="./images/scheme/2.svg" alt="">
+                            <img src="./images/scheme/2.png" alt="">
                             <div class="scheme__block-main">
                                 <div class="scheme__block-header">
                                     <p class="scheme__block-number">02</p>
@@ -268,7 +268,7 @@
                             </div>
                         </div>
                         <div class="scheme__block third">
-                            <img src="./images/scheme/3.svg" alt="">
+                            <img src="./images/scheme/3.png" alt="">
                             <div class="scheme__block-main">
                                 <div class="scheme__block-header">
                                     <p class="scheme__block-number">03</p>
@@ -283,7 +283,7 @@
                             </div>
                         </div>
                         <div class="scheme__block four">
-                            <img src="./images/scheme/6.svg" alt="">
+                            <img src="./images/scheme/4.png" alt="">
                             <div class="scheme__block-main">
                                 <div class="scheme__block-header">
                                     <p class="scheme__block-number">04</p>
@@ -298,7 +298,7 @@
                             </div>
                         </div>
                         <div class="scheme__block five">
-                            <img src="./images/scheme/5.svg" alt="">
+                            <img src="./images/scheme/5.png" alt="">
                             <div class="scheme__block-main">
                                 <div class="scheme__block-header">
                                     <p class="scheme__block-number">05</p>
@@ -313,7 +313,7 @@
                             </div>
                         </div>
                         <div class="scheme__block six">
-                            <img src="./images/scheme/4.svg" alt="">
+                            <img src="./images/scheme/6.png" alt="">
                             <div class="scheme__block-main">
                                 <div class="scheme__block-header">
                                     <p class="scheme__block-number">06</p>
