really final fixes

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             </div>
         </section>
         <section class="faq">
-            <div class="faq-background"><img src="./images/Backgrounds/faq.svg" alt=""></div>
+            <div class="faq-background" aria-hidden="true"><img src="./images/Backgrounds/faq.svg" alt=""></div>
             <div class="container">
                 <h2 class="faq-title title">Ответы на самые популярные вопросы в сфере</h2>
                 <div class="faq__main">
